[package]
name = "nokiahealth"
version = "0.1.0"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]

readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/zoranzaric/nokiahealth-rs"
repository = "https://github.com/zoranzaric/nokiahealth-rs.git"

[dependencies]
clap = "2.31.1"
chrono = "0.4"
csv = "1.0.0-beta.5"
log = "0.4.0"
loggerv = "0.7.1"
influent = "0.4"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

[dev-dependencies]
stringreader = "*"
