[package]
name = "nokiahealth"
version = "0.1.0"
authors = ["Zoran Zaric <zz@zoranzaric.de>"]
description = "A crate that helps manage NOKIA Health data"

readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/zoranzaric/nokiahealth-rs"
repository = "https://github.com/zoranzaric/nokiahealth-rs.git"

[dependencies]
clap = "2.31.1"
chrono = "0.4"
csv = "1.0.0-beta.5"
influent = "0.4"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
stringreader = "0.1.1"
